<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:src="@mipmap/logo2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/login_input_layout_margin_top"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.train.lingshi.widget.ClearEditText
            android:id="@+id/phone"
            android:layout_width="@dimen/common_input_wdith"
            android:layout_height="@dimen/common_input_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/common_input_nor_bg"
            android:drawableLeft="@mipmap/shuruzhanghao"
            android:drawablePadding="@dimen/common_input_text_margin_left"
            android:hint="请输入邮箱账号或手机号"
            android:inputType="phone"
            android:paddingLeft="@dimen/common_input_padding"
            android:paddingRight="@dimen/common_input_padding"
            android:singleLine="true"
            android:textSize="@dimen/common_input_hint_text_size" />


        <com.train.lingshi.widget.ClearEditText
            android:id="@+id/password"
            android:layout_width="@dimen/common_input_wdith"
            android:layout_height="@dimen/common_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_input_margin_top"
            android:background="@drawable/common_input_error_bg"
            android:drawableLeft="@mipmap/mima"
            android:drawableRight="@mipmap/mimayanjing"
            android:drawablePadding="@dimen/common_input_text_margin_left"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/common_input_padding"
            android:paddingRight="@dimen/common_input_padding"
            android:singleLine="true"
            android:textSize="@dimen/common_input_hint_text_size" />

        <RelativeLayout
            android:layout_width="@dimen/common_input_wdith"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_find_layout_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/login_find_margin_left"
                android:text="@string/login_retrieve_password"
                android:textColor="@color/login_find_text_color"
                android:textSize="@dimen/login_find_text_size" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/login_register_margin_right"
                android:text="@string/login_register"
                android:textColor="@color/login_register_text_color"
                android:textSize="@dimen/login_register_text_size" />

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/login_register_button_width"
        android:layout_height="@dimen/login_register_button_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/login_register_button_margin_button"
        android:text="@string/login"
        android:background="@drawable/login_register_btn_bg"
        android:textSize="@dimen/login_register_button_text_size" />


</LinearLayout>
